Atualiza layout responsivo e ajustes na tabela de velocidades

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo" />
-    <button id="toggle-theme" class="toggle-btn">☀️ Modo Claro</button>
+    <img src="Logo.png" alt="logo" />
+    <button id="toggle-theme" class="toggle-btn">🌙 Modo Escuro</button>
   </header>
   <div class="table-container">
     <table>
