--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo" />
+    <img src="Logo.png" alt="Logo" />
     <button id="toggle-theme" class="toggle-btn">🌙 Modo Escuro</button>
   </header>
   <div class="table-container">
