Atualiza layout responsivo, resolve conflitos e ajustes na tabela de velocidades

--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
 
       <!-- Sexto bloco (condições) -->
       <tr><td class="section-title" colspan="2"></td></tr>
-      <tr><td class="label-cell">Ponte (≥ 499)</td>             <td id="ponte">❌</td></tr>
-      <tr><td class="label-cell">Cidades e Depot (≥ 592)</td>   <td id="cidades">❌</td></tr>
-      <tr><td class="label-cell">Roshamull / Terra (≥ 696)</td> <td id="terra">❌</td></tr>
-      <tr><td class="label-cell">Darashia (≥ 813)</td>          <td id="darashia">❌</td></tr>
-      <tr><td class="label-cell">The Hive (≥ 876)</td>          <td id="hive">❌</td></tr>
-      <tr><td class="label-cell">Grama / Cascalho (≥ 1258)</td> <td id="grama">❌</td></tr>
-      <tr><td class="label-cell">Areia e Neve (≥ 1443)</td>     <td id="areia">❌</td></tr>
-      <tr><td class="label-cell">Lama (≥ 2444)</td>             <td id="lama">❌</td></tr>
-      <tr><td class="label-cell">Underwater (≥ 4557)</td>       <td id="underwater">❌</td></tr>
+      <tr><td class="label-cell">Ponte</td>             <td id="ponte">❌</td></tr>
+      <tr><td class="label-cell">Cidades e Depot</td>   <td id="cidades">❌</td></tr>
+      <tr><td class="label-cell">Roshamull / Terra</td> <td id="terra">❌</td></tr>
+      <tr><td class="label-cell">Darashia</td>          <td id="darashia">❌</td></tr>
+      <tr><td class="label-cell">The Hive</td>          <td id="hive">❌</td></tr>
+      <tr><td class="label-cell">Grama / Cascalho</td> <td id="grama">❌</td></tr>
+      <tr><td class="label-cell">Areia e Neve</td>     <td id="areia">❌</td></tr>
+      <tr><td class="label-cell">Lama</td>             <td id="lama">❌</td></tr>
+      <tr><td class="label-cell">Underwater</td>       <td id="underwater">❌</td></tr>
     </table>
   </div>
 
